xml/my_CUDA2100_vector_types.h

/*DEVICE_BUILTIN*/
struct short3
{
  short x, y, z;
};
/*DEVICE_BUILTIN*/
struct ushort3
{
  unsigned short x, y, z;
};
/*DEVICE_BUILTIN*/
struct int1
{
  int x;
};
/*DEVICE_BUILTIN*/
struct uint1
{
  unsigned int x;
};
/*DEVICE_BUILTIN*/
struct int3
{
  int x, y, z;
};
/*DEVICE_BUILTIN*/
struct uint3
{
  unsigned int x, y, z;
};
/*DEVICE_BUILTIN*/
struct long1
{
  long int x;
};
/*DEVICE_BUILTIN*/
struct ulong1
{
  unsigned long x;
};
       __builtin_align__(8)
#else /* _WIN32 */
       __builtin_align__(2*sizeof(long int))
#endif /* _WIN32 */
       __builtin_align__(8)
#else /* _WIN32 */
       __builtin_align__(2*sizeof(unsigned long int))
#endif /* _WIN32 */
/*DEVICE_BUILTIN*/
struct long3
{
  long int x, y, z;
};
/*DEVICE_BUILTIN*/
struct ulong3
{
  unsigned long int x, y, z;
};
/*DEVICE_BUILTIN*/
struct float1
{
  float x;
};
/*DEVICE_BUILTIN*/
struct float3
{
  float x, y, z;
};
/*DEVICE_BUILTIN*/
struct double1
{
  double x;
};
/*DEVICE_BUILTIN*/
typedef struct short3 short3;
/*DEVICE_BUILTIN*/
typedef struct ushort3 ushort3;
/*DEVICE_BUILTIN*/
typedef struct short4 short4;
/*DEVICE_BUILTIN*/
typedef struct ushort4 ushort4;
/*DEVICE_BUILTIN*/
typedef struct int1 int1;
/*DEVICE_BUILTIN*/
typedef struct uint1 uint1;
/*DEVICE_BUILTIN*/
typedef struct int2 int2;
/*DEVICE_BUILTIN*/
typedef struct uint2 uint2;
/*DEVICE_BUILTIN*/
typedef struct int3 int3;
/*DEVICE_BUILTIN*/
typedef struct uint3 uint3;
/*DEVICE_BUILTIN*/
typedef struct int4 int4;
/*DEVICE_BUILTIN*/
typedef struct uint4 uint4;
/*DEVICE_BUILTIN*/
typedef struct long1 long1;
/*DEVICE_BUILTIN*/
typedef struct ulong1 ulong1;
/*DEVICE_BUILTIN*/
typedef struct long2 long2;
/*DEVICE_BUILTIN*/
typedef struct ulong2 ulong2;
/*DEVICE_BUILTIN*/
typedef struct long3 long3;
/*DEVICE_BUILTIN*/
typedef struct ulong3 ulong3;
/*DEVICE_BUILTIN*/
typedef struct long4 long4;
/*DEVICE_BUILTIN*/
typedef struct ulong4 ulong4;
/*DEVICE_BUILTIN*/
typedef struct float1 float1;
/*DEVICE_BUILTIN*/
typedef struct float2 float2;
/*DEVICE_BUILTIN*/
typedef struct float3 float3;
/*DEVICE_BUILTIN*/
typedef struct float4 float4;
/*DEVICE_BUILTIN*/
typedef struct double1 double1;
/*DEVICE_BUILTIN*/
typedef struct double2 double2;
/*******************************************************************************
*                                                                              *
*                                                                              *
*                                                                              *
*******************************************************************************/

/*DEVICE_BUILTIN*/
typedef struct dim3 dim3;
/*DEVICE_BUILTIN*/
struct dim3
{
    unsigned int x, y, z;
};