cuda_defs.py


#struct short3
#{
#  short x, y, z;
#};
#
#struct ushort3
#{
#  unsigned short x, y, z;
#};
#
class short3(Structure):
    _fields_ = [("x",   c_short),
                ("y",   c_short),
                ("z",   c_short)]
class ushort3(Structure):
    _fields_ = [("x",   c_ushort),
                ("y",   c_ushort),
                ("z",   c_ushort)]

#struct __builtin_align__(8) short4
#{
#  short x, y, z, w;
#};
#
#struct __builtin_align__(8) ushort4
#{
#  unsigned short x, y, z, w;
#};
#
class short4(Structure):
    _fields_ = [("x",   c_short),
                ("y",   c_short),
                ("z",   c_short),
                ("w",   c_short)]
class ushort4(Structure):
    _fields_ = [("x",   c_ushort),
                ("y",   c_ushort),
                ("z",   c_ushort),
                ("w",   c_ushort)]

#struct int1
#{
#  int x;
#};
#
#struct uint1
#{
#  unsigned int x;
#};
#
class int1(Structure):
    _fields_ = [("x",   c_int)]
class uint1(Structure):
    _fields_ = [("x",   c_uint)]

#struct __builtin_align__(8) int2
#{
#  int x, y;
#};
#
#struct __builtin_align__(8) uint2
#{
#  unsigned int x, y;
#};
#
class int2(Structure):
    _fields_ = [("x",   c_int),
                ("y",   c_int)]
class uint2(Structure):
    _fields_ = [("x",   c_uint),
                ("y",   c_uint)]

#struct int3
#{
#  int x, y, z;
#};
#
#struct uint3
#{
#  unsigned int x, y, z;
#};
#
class int3(Structure):
    _fields_ = [("x",   c_int),
                ("y",   c_int),
                ("z",   c_int)]
class uint3(Structure):
    _fields_ = [("x",   c_uint),
                ("y",   c_uint),
                ("z",   c_uint)]

#struct __builtin_align__(16) int4
#{
#  int x, y, z, w;
#};
#
#struct __builtin_align__(16) uint4
#{
#  unsigned int x, y, z, w;
#};
#
class int4(Structure):
    _fields_ = [("x",   c_int),
                ("y",   c_int),
                ("z",   c_int),
                ("w",   c_int)]
class uint4(Structure):
    _fields_ = [("x",   c_uint),
                ("y",   c_uint),
                ("z",   c_uint),
                ("w",   c_uint)]

#struct long1
#{
#  long x;
#};
#
#struct ulong1
#{
#  unsigned long x;
#};
#
class long1(Structure):
    _fields_ = [("x",   c_long)]
class ulong1(Structure):
    _fields_ = [("x",   c_ulong)]

#struct __builtin_align__(8) long2
#{
#  long x, y;
#};
#
#struct __builtin_align__(8) ulong2
#{
#  unsigned long x, y;
#};
#
class long2(Structure):
    _fields_ = [("x",   c_long),
                ("y",   c_long)]
class ulong2(Structure):
    _fields_ = [("x",   c_ulong),
                ("y",   c_ulong)]

#struct long3
#{
#  long x, y, z;
#};
#
#struct ulong3
#{
#  unsigned long x, y, z;
#};
#
class long3(Structure):
    _fields_ = [("x",   c_long),
                ("y",   c_long),
                ("z",   c_long)]
class ulong3(Structure):
    _fields_ = [("x",   c_ulong),
                ("y",   c_ulong),
                ("z",   c_ulong)]

#struct __builtin_align__(16) long4
#{
#  long x, y, z, w;
#};
#
#struct __builtin_align__(16) ulong4
#{
#  unsigned long x, y, z, w;
#};
#
class long4(Structure):
    _fields_ = [("x",   c_long),
                ("y",   c_long),
                ("z",   c_long),
                ("w",   c_long)]
class ulong4(Structure):
    _fields_ = [("x",   c_ulong),
                ("y",   c_ulong),
                ("z",   c_ulong),
                ("w",   c_ulong)]

#struct float1
#{
#  float x;
#};
#
class float1(Structure):
    _fields_ = [("x",   c_float)]

#struct __builtin_align__(8) float2
#{
#  float x, y;
#};
#
class float2(Structure):
    _fields_ = [("x",   c_float),
                ("y",   c_float)]

#struct float3
#{
#  float x, y, z;
#};
#
class float3(Structure):
    _fields_ = [("x",   c_float),
                ("y",   c_float),
                ("z",   c_float)]

#struct __builtin_align__(16) float4
#{
#  float x, y, z, w;
#};
#
class float4(Structure):
    _fields_ = [("x",   c_float),
                ("y",   c_float),
                ("z",   c_float),
                ("w",   c_float)]

#struct double1
#{
#  double x;
#};
class double1(Structure):
    _fields_ = [("x",   c_float)]

#struct __builtin_align__(16) double2
#{
#  double x, y;
#};
class double2(Structure):
    _fields_ = [("x",   c_float),
                ("y",   c_float)]

#struct dim3
#{
#    unsigned int x, y, z;
##if defined(__cplusplus)
#    dim3(unsigned int x = 1, unsigned int y = 1, unsigned int z = 1) : x(x), y(y), z(z) {}
#    dim3(uint3 v) : x(v.x), y(v.y), z(v.z) {}
#    operator uint3(void) { uint3 t; t.x = x; t.y = y; t.z = z; return t; }
##endif /* __cplusplus */
#};
#
class dim3(Structure):
    _fields_ = [("x",   c_uint),
                ("y",   c_uint),
                ("z",   c_uint)]

# for OpenGL

GLuint = c_uint
